Panels 6.x-3.0-dev
==================

#422712: Panel page import button went to wrong place.
#423288: Profile template plugin had wrong path.
#424176: Panel nodes: Remove unused layout screen, fix some notice errors, give context a description.
New simpler panel page task that doesn't bother with handlers at all.
#317121: Respect 'hide title' option in display settings.
#422404: Update to exportables left mini panels kind of broken.
#422180 by joshk: Fix panel node_access to accept incoming $account.
Moved content types to CTools.
Better add content dialog.
#437742 by jcmarco: Missing include.
#440142 by jcmarco: Did not change panels_get_content_types to ctools_get_content_types.
Add a live preview widget to the panel content edit page.
Fix panel page type to actually respect the contexts.
Upgrades from as far back as Drupal 5 can now be supported.
Rearranged the menus, created the Panel dashboard.

Panels 6.x-3.0-alpha3
=====================
Note: This changelog is incomplete, as it was started sometime after alpha2.ls

#349979 by Dave Reid: Proper use of link alter.
#374628: Add a check for broken display to the admin summary to prevent crashes.
Retool flexible layout into a nice javascripty visual layout builder.
Retool mini panels to use ctools export class and provide a .inc file for its content type as a better example.
Store a panel task handler's display in the database.
Add a mechanism to fetch information about just one content subtype (i.e, single view, single block) instead of fetching them all.
Overhaul node_content_type creating a .inc file.
Add 'content type' property to content types.
Add 'defaults' property to content types.
Panels views cleanup, including making exposed form blocks available.
#391788 by guix: Simple cache should not unserialize data that is now already unserialized.
#367635 by lee20: View title built too early and so lost arguments.