@@ -67,38 +67,42 @@
 }
 
 /* styles for the choose layout page */
-#panels-common-set-allowed-layouts .form-checkboxes .form-item,
+.panels-layouts-checkboxes .form-checkboxes .form-item,
 #panels-choose-layout .form-radios .form-item {
   float: left;
   margin-right: .5em;
   width: 90px;
 }
 
-#panels-common-set-allowed-layouts .form-checkboxes .form-item .layout-icon,
+.panels-layouts-checkboxes .form-checkboxes .form-item .layout-icon,
 #panels-choose-layout .form-radios .form-item .layout-icon {
   float: none;
   height: 15em;
   width: 90px;
 }
-#panels-common-set-allowed-layouts .form-checkboxes .option,
+.panels-layouts-checkboxes .form-checkboxes .option,
 #panels-choose-layout .form-radios .form-item .option {
   width: 50px;
   display: block;
   text-align: center; 
 }
 
-#panels-common-set-allowed-layouts .form-submit,
+.panels-layouts-checkboxes .form-submit,
 #panels-choose-layout .form-submit {
   clear: left;
 }
 
-#panels-common-set-allowed-layouts .panels-layout-list label,
+.panels-layouts-checkboxes .panels-layout-list label,
 #panels-choose-layout .panels-layout-list label {
   width: 300px;
   float: left;
   clear: left;
   background: url(../images/go-right.png) right no-repeat;
   margin-right: 20px;
+}
+
+.panels-layouts-checkboxes .description {
+  clear: left;
 }
 
 .change-layout-display .layout-icon {
