@@ -195,7 +195,7 @@ class panels_allowed_layouts {
    * that has not been serialized.
    *
    */
-  function api_save() {
+  function save() {
     if (!is_null($this->module_name)) {
       variable_set($this->module_name . "_allowed_layouts", serialize($this));
     }
@@ -228,15 +228,20 @@ function panels_common_settings(&$form_state, $module_name = 'panels_common') {
   panels_load_include('plugins');
   ctools_include('content');
   $content_types = ctools_get_content_types();
+  $skip = FALSE;
+  
   $default_types = variable_get($module_name . '_default', NULL);
   if (!isset($default_types)) {
-    $default_types = array('block' => TRUE, 'views' => TRUE, 'other' => TRUE);
+    $default_types = array('other' => TRUE);
     $skip = TRUE;
   }
 
   foreach ($content_types as $id => $info) {
     if (empty($info['single'])) {
       $default_options[$id] = t('New @s', array('@s' => $info['title']));
+      if ($skip) {
+        $default_types[$id] = TRUE;
+      }
     }
   }
 
@@ -249,9 +254,9 @@ function panels_common_settings(&$form_state, $module_name = 'panels_common') {
     '#default_value' => array_keys(array_filter($default_types)),
   );
 
+  $form_state['skip'] = $skip;
   if ($skip) {
     $form['markup'] = array('#value' => t('<p>Click Submit to be presented with a complete list of available content types set to the defaults you selected.</p>'));
-    $form['skip'] = array('#type' => 'value', '#value' => TRUE);
   }
   else {
     // Rebuild the entire list, setting appropriately from defaults. Give
@@ -295,6 +300,8 @@ function panels_common_settings(&$form_state, $module_name = 'panels_common') {
     }
   }
 
+  panels_common_allowed_layouts_form($form, $form_state, $module_name);
+
   $form['module_name'] = array(
     '#type' => 'value',
     '#value' => $module_name,
@@ -312,10 +319,18 @@ function panels_common_settings(&$form_state, $module_name = 'panels_common') {
 /**
  * Submit hook for panels_common_settings
  */
+function panels_common_settings_validate($form, &$form_state) {
+  panels_common_allowed_layouts_form_validate($form, $form_state);
+}
+
+/**
+ * Submit hook for panels_common_settings
+ */
 function panels_common_settings_submit($form, &$form_state) {
+  panels_common_allowed_layouts_form_submit($form, $form_state);
   $module_name = $form_state['values']['module_name'];
   variable_set($module_name . '_default', $form_state['values']['panels_common_default']);
-  if (!$form_state['values']['skip']) {
+  if (!$form_state['skip']) {
     // merge the broken apart array neatly back together
     variable_set($module_name . '_allowed_types', call_user_func_array('array_merge', $form_state['values']['content_types']));
   }
@@ -326,10 +341,9 @@ function panels_common_settings_submit($form, &$form_state) {
  * Based upon the settings, get the allowed types for this node.
  */
 function panels_common_get_allowed_types($module, $contexts = array(), $has_content = FALSE, $default_defaults = array(), $default_allowed_types = array()) {
-
   // Get a list of all types that are available
 
-  $default_types = variable_get($module . '_defaults', $default_defaults);
+  $default_types = variable_get($module . '_default', $default_defaults);
   $allowed_types = variable_get($module . '_allowed_types', $default_allowed_types);
 
   // By default, if they haven't gone and done the initial setup here,
@@ -364,22 +378,17 @@ function panels_common_get_allowed_types($module, $contexts = array(), $has_cont
  * @param array $allowed_layouts
  *  The set of allowed layouts that should be used as the default values
  *  for this form. If none is provided, then by default no layouts will be restricted.
- * @param string $title
- *  The title that will be used for the form. Defaults to 'Panels: Allowed Layouts' if
- *  no value was provided in panels_allowed_layouts::set_allowed.
  */
-// TODO need to add something that handles $finish & $destination-type stuff.
-function panels_common_set_allowed_layouts(&$form_state, $allowed_layouts, $title) {
+function panels_common_allowed_layouts_form(&$form, &$form_state, $module_name) {
+  // Fetch our allowed layouts from variables.
+  $allowed_layouts = panels_common_get_allowed_layout_object($module_name);
+
   $layouts = panels_get_layouts();
   foreach ($layouts as $id => $layout) {
     $options[$id] = panels_print_layout_icon($id, $layout, check_plain($layout['title']));
   }
 
-  drupal_set_title($title);
-
   $form_state['allowed_layouts'] = &$allowed_layouts;
-
-  $form['variables'] = array('#type' => 'value', '#value' => array($allowed_layouts));
 
   drupal_add_js(panels_get_path('js/layout.js'));
   $form['layouts'] = array(
@@ -388,80 +397,73 @@ function panels_common_set_allowed_layouts(&$form_state, $allowed_layouts, $titl
     '#options' => $options,
     '#description' => t('Check the boxes for all layouts you want to allow users choose from when picking a layout. You must allow at least one layout.'),
     '#default_value' => array_keys(array_filter($allowed_layouts->allowed_layout_settings)),
+    '#prefix' => '<div class="clear-block panels-layouts-checkboxes">',
+    '#suffix' => '</div>',
   );
 
-  $form['clearer'] = array(
-    // TODO: Fix this to use clear-block instead
-    '#value' => '<div style="clear: both;"></div>',
-  );
-  $form['#redirect'] = FALSE;
-  $form['submit'] = array(
-    '#type' => 'submit',
-    '#value' => t('Save'),
-  );
-
-  $form['#token'] = FALSE;
   return $form;
 }
 
-function panels_common_set_allowed_layouts_validate($form, &$form_state) {
+function panels_common_allowed_layouts_form_validate($form, &$form_state) {
   $selected = array_filter($form_state['values']['layouts']);
   if (empty($selected)) {
     form_set_error('layouts', 'You must choose at least one layout to allow.');
   }
 }
 
-function panels_common_set_allowed_layouts_submit($form, &$form_status) {
+function panels_common_allowed_layouts_form_submit($form, &$form_state) {
   foreach ($form_state['values']['layouts'] as $layout => $setting) {
-    $form_state['allowed_layouts']->allowed_layout_settings[$layout] = $setting === 0 ? 0 : 1;
+    $form_state['allowed_layouts']->allowed_layout_settings[$layout] = (bool) $setting;
   }
-  method_exists($form_state['allowed_layouts'], 'save') ? $form_state['allowed_layouts']->save() : $form_state['allowed_layouts']->api_save();
-  return $form_state['allowed_layouts']->allowed_layout_settings;
+  $form_state['allowed_layouts']->save();
 }
 
 /**
- * The layout information fieldset displayed at admin/edit/panel-%implementation%/add/%layout%.
+ * Get the allowed layout object for the given module.
  */
-function panels_common_get_layout_information($panel_implementation, $contexts = array()) {
-  $form = array();
-  panels_load_include('plugins');
-  $layout = panels_get_layout($panel_implementation->display->layout);
+function panels_common_get_allowed_layout_object($module_name) {
+  $allowed_layouts = unserialize(variable_get($module_name . "_allowed_layouts", serialize('')));
 
-  $form = array(
-    '#type' => 'fieldset',
-    '#title' => t('Layout'),
-  );
-
-  $form['layout-icon'] = array(
-    '#value' => panels_print_layout_icon($panel_implementation->display->layout, $layout),
-  );
-
-  $form['layout-display'] = array(
-    '#value' => check_plain($layout['title']),
-  );
-  $content = '<dl class="content-list">';
-
-  foreach (panels_get_panels($layout, $panel_implementation->display) as $panel_id => $title) {
-    $content .= "<dt>$title</dt><dd>";
-    if ($panel_implementation->display->panels[$panel_id]) {
-      $content .= '<ol>';
-      foreach ($panel_implementation->display->panels[$panel_id] as $pid) {
-        $content .= '<li>'. panels_get_pane_title($panel_implementation->display->content[$pid], $contexts) .'</li>';
-      }
-      $content .= '</ol>';
-    }
-    else {
-      $content .= t('Empty');
-    }
-    $content .= '</dd>';
+  // if no parameter was provided, or the variable_get failed
+  if (!$allowed_layouts) {
+    // still no dice. simply creates a dummy version where all layouts
+    // are allowed.
+    $allowed_layouts = new panels_allowed_layouts();
+    $allowed_layouts->allow_new = TRUE;
+    $allowed_layouts->module_name = $module_name;
   }
-  $content .= '</dl>';
 
-  $form['layout-content'] = array(
-    '#value' => $content,
-  );
+  // sanitize allowed layout listing; this is redundant if the
+  // $allowed_layouts param was null, but the data is cached anyway
+  $allowed_layouts->sync_with_available();
 
-  return $form;
+  return $allowed_layouts;
+}
+
+/**
+ * Get the allowed layouts for the given module.
+ */
+function panels_common_get_allowed_layouts($module_name) {
+  $available_layouts = panels_get_layouts();
+  if (empty($module_name)) {
+    return $available_layouts;
+  }
+  else if (is_object($module_name)) {
+    $allowed_layouts = $module_name;
+  }
+  else {
+    $allowed_layouts = panels_common_get_allowed_layout_object($module_name);
+  }
+
+  $allowed = array_filter($allowed_layouts->allowed_layout_settings);
+  $layouts = array();
+  foreach ($available_layouts as $layout_key => $layout_settings) {
+    if (!empty($allowed[$layout_key])) {
+      $layouts[$layout_key] = $layout_settings;
+    }
+  }
+
+  return $layouts;
 }
 
 /**
