@@ -195,42 +195,48 @@ function panels_menu() {
     'page callback' => 'panels_ajax_preview',
   ) + $base;
 
+  $admin_base = array(
+    'file' => 'includes/callbacks.inc',
+    'access arguments' => array('access administration pages'),
+
+  );
   // Provide a nice location for a panels admin panel.
   $items['admin/build/panels'] = array(
     'title' => 'Panels',
-    'access arguments' => array('access administration pages'),
     'page callback' => 'panels_admin_page',
-    'file' => 'includes/callbacks.inc',
     'description' => 'Administer items related to the Panels module.',
-  );
+  ) + $admin_base;
 
   $items['admin/build/panels/dashboard'] = array(
     'title' => 'Dashboard',
-    'access arguments' => array('access administration pages'),
     'page callback' => 'panels_admin_page',
-    'file' => 'includes/callbacks.inc',
     'type' => MENU_DEFAULT_LOCAL_TASK,
     'weight' => -10,
-  );
+  ) + $admin_base;
 
   $items['admin/build/panels/settings'] = array(
     'title' => 'Settings',
-    'access arguments' => array('access administration pages'),
     'page callback' => 'drupal_get_form',
     'page arguments' => array('panels_admin_settings_page'),
-    'file' => 'includes/callbacks.inc',
     'type' => MENU_LOCAL_TASK,
-  );
+  ) + $admin_base;
 
   $items['admin/build/panels/settings/general'] = array(
     'title' => 'General',
-    'access arguments' => array('access administration pages'),
     'page callback' => 'drupal_get_form',
     'page arguments' => array('panels_admin_settings_page'),
-    'file' => 'includes/callbacks.inc',
     'type' => MENU_DEFAULT_LOCAL_TASK,
     'weight' => -10,
-  );
+  ) + $admin_base;
+
+  if (module_exists('delegator')) {
+    $items['admin/build/panels/settings/panel-page'] = array(
+      'title' => 'Panel pages',
+      'page callback' => 'panels_admin_panel_context_page',
+      'type' => MENU_LOCAL_TASK,
+      'weight' => -10,
+    ) + $admin_base;
+  }
 
   panels_load_include('plugins');
   $layouts = panels_get_layouts();
